--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
     "onnxruntime-web": "^1.22.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
